# imgcopy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rustci.yml
imgcopy/: Cargo.toml
imgcopy/src/: checks.rs  error.rs  exif.rs  lib.rs  sync.rs
imgcp/: Cargo.toml
imgcp/src/: main.rs
imgcp_gui/: Cargo.toml
imgcp_gui/src/: main.rs
src/: error.rs  exif.rs  lib.rs  main.rs  sync.rs
src/imgcp/: main.rs
src/imgcp_gui/: main.rs
