[package]
name = "imgcopy"
version = "0.1.0"
authors = ["Philipp Degler <deglerp@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
promptly = "0"
anyhow = "1"
thiserror = "1"
same-file = "1"
walkdir = "2"
rexif = "0.5"
sha-1 = "0.9"