[workspace]
resolver = "2"

members = ["imgcopy", "imgcp", "imgcp_gui"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ffmpeg-next = "7"
flexi_logger = "0.29"
imgcopy = { path = "imgcopy" }
log = "0.4"
native-dialog = "0.7"
promptly = "0.3"
rexif = "0.7"
same-file = "1"
sha-1 = "0.10"
thiserror = "1"
walkdir = "2"