[package]
name = "imgcopy"
version = "0.1.0"
authors = ["Philipp Degler <deglerp@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
same-file = "1"
walkdir = "2"
rexif = "0.7"
sha-1 = "0.9"