[package]
name = "imgcopy"
version = "0.2.0"
authors = ["Philipp Degler <deglerp@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next.workspace = true
log.workspace = true
rexif.workspace = true
same-file.workspace = true
sha-1.workspace = true
thiserror.workspace = true
walkdir.workspace = true
