[package]
name = "imgcp"
version = "0.2.0"
authors = ["Philipp Degler <deglerp@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
promptly = "0"
anyhow = "1"
flexi_logger = "0.22"
imgcopy = { path = "../imgcopy" }