[package]
name = "imgcp"
version = "0.2.0"
authors = ["Philipp Degler <deglerp@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
promptly = "0.3"
anyhow = "1"
flexi_logger = "0.28"
imgcopy = { path = "../imgcopy" }
