[package]
name = "imgcp"
version = "0.2.0"
authors = ["Philipp Degler <deglerp@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
flexi_logger.workspace = true
imgcopy.workspace = true
promptly.workspace = true
