[package]
name = "imgcp_gui"
version = "0.1.0"
authors = ["Philipp Degler <deglerp@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
druid = { git = "https://github.com/linebender/druid" }
imgcopy = { path = "../imgcopy" }
