[package]
name = "imgcp_gui"
version = "0.1.0"
authors = ["Philipp Degler <deglerp@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
native-dialog = "0.6"
imgcopy = { path = "../imgcopy" }
